--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#020617" />
-    <title>My Project</title>
+    <title>BenefitFinder</title>
   </head>
   <body class="bg-slate-950 text-slate-100">
     <div id="root"></div>
